Divided scanner and view in different threads